tests/miniJava/neg/006684_mutation.MiniJava
class java { public static void new ( String [ ] java ) { { } } }
